css/style.css
/* ... */
	.en__component--hero-storywall-block,
	.en__component--hero-advocacy-block {display: flex; justify-content: space-between; align-items: flex-end;}

	@media (max-width: 700px) {
		.en__component--hero-storywall-block,
		.en__component--hero-advocacy-block {    flex-direction: column-reverse;}


	}
	@media (max-width: 700px) { 
		.en__component--column.en__component--advcolumn.en__component--hero-advocacy-block {  background-image: url('../images/Supporter-mobile.jpg'); background-position: left center; background-repeat: no-repeat; background-size:60% auto; width: 100%;}
	}

	.en__component--column.en__component--advcolumn.en__component--header {flex:none;}
	.en__component--hero-block > .en__component:first-child {width: 45%; background-image: url('../images/Clock_Hands.svg'); background-position: left bottom; background-size: contain; background-repeat:no-repeat; padding-bottom: 215px;}
	@media (max-width: 1023px) {
		.en__component--hero-block > .en__component:first-child {width: auto; padding-bottom: 0; background-image:none;margin-bottom: 60px;}
	}
	.en__component--hero-block > .en__component:first-child p:first-of-type {color: #009EE2; font-size: 2rem; font-weight: 700;}
	.en__component--hero-block > .en__component:first-child p:nth-of-type(2) {margin-bottom:1rem; font-weight: 700;}
	.en__component--hero-block > .en__component:nth-child(2) {transform: scaleX(-1);}
	.en__component--hero-block > .en__component:nth-child(2) img { max-width: 344px; margin-top: 140px;}
	@media (max-width: 1023px) {
		.en__component--hero-block > .en__component:nth-child(2) img { margin-top:0;  max-width: 100%;}
	}
	.en__component--hero-block > .en__component:last-child,
	.en__component--hero-storywall-block > .en__component:last-child {width: 154px;}
	.en__component--hero-storywall-block .en__component--imageblock {margin-right: calc((100vw - 1400px ) / 2);}
	@media (max-width: 1400px) {
		.en__component--hero-storywall-block .en__component--imageblock {margin-right: 0;}
	}
	.en__component--hero-advocacy-block > .en__component:last-child {width: 154px;}
	@media (max-width: 1023px) {
		.en__component--hero-block > .en__component:last-child,
		.en__component--hero-storywall-block > .en__component:last-child {width: 50%;}
		
		
		.en__component--hero-block > .en__component:last-child img {max-width: 80%;    margin-left: 20%;}
	}
	@media (max-width: 700px) {
		.en__component--hero-advocacy-block > .en__component:last-child {width: 30%;}
	}
	@media (max-width: 1312px) {
		.hero-storywall-bg {position: absolute;
		    left: 0;
		    bottom: -3.5rem;
		    width: 100%;
		}

		.en__component--hero-storywall-block > .en__component:last-child {width: 20%; background: black;
    padding: 10px; position: absolute;
    right: 0;
    top: 20px;}
		.en__component--hero-storywall-row {background-size: cover; position: relative; min-height: 56vw; margin-bottom: 4rem;}

	}
	/*.en__component--hero-advocacy-block .en__component--imageblock {margin-right: calc((100vw - 1400px ) / 2);}*/
	.en__component--list-with-tick-icon li { background-image: url('../images/Black_Tick_Blue_Circle.svg');background-repeat: no-repeat;     background-size: 1.7em 1.7em; list-style: none; padding: 0 0 0 3.2rem;  margin: 0 0 1.2rem 0; } 
	.blue-header h2, .blue-header h3, .blue-header h4 {color:  #009EE2;}
	.en__component--header { position: static;}
	.en__component--header div { position: static;}
	.en__component--header .en__component--imageblock img,
	.en__component--row:last-of-type .en__component--imageblock img{ width: 140px; }
	
	.en__component--header .en__component--imageblock a {text-decoration: none;  display: flex;  align-items: center; height: auto; position:relative; right: calc( ( (100vw - 1400px ) / 2) - 30%);}
	.en__component--row:last-of-type .en__component--imageblock {margin-left: 3%;}
	.en__component--row:last-of-type .en__component--imageblock a {text-decoration: none;  display: flex;  align-items: center; height: auto; position:relative; color: white;}
	@media (max-width: 1400px) { .en__component--header .en__component--imageblock a { right: auto;} }
	.en__component--header .en__component--imageblock a:after { content: 'Main site'; font-weight: 600; color: #999; margin-left:30px; margin-left: 20px; padding-left: 24px;line-height: 1.2;  background-image: url('../images/chev-l-gray.svg'); background-repeat: no-repeat; }
	.en__component--row:last-of-type .en__component--imageblock a:after { content: 'Main site';  background-image: url('../images/chev-l.svg'); background-repeat: no-repeat; font-weight: 600; color: white; margin-left: 20px; padding-left: 24px;line-height: 1.2;}
	/*.en__component--back-to-main-site { position:relative; right: calc( ( (100vw - 1400px ) / 2) - 7%); }*/
	@media (max-width: 1400px) { .en__component--back-to-main-site  { right: auto;} }
	.en__component--header nav { display: none; } 
	@media (min-width: 1024px) { .en__component--header nav { display: block; } }
	.en__component--header ul { display: flex; flex-direction: column; list-style: none; margin:0; padding: 0; }
	@media (min-width: 1024px) {
		.en__component--header ul { flex-direction: row; justify-content: space-between; }
	}
	.en__component--header li { margin:0; padding: 0; }
	.en__component--header li:last-child { margin-left: 20px;}
	.en__component--header li a { display: block; text-decoration: none; padding: 10px 22px; color: #999999; font-weight: 700;letter-spacing: 1px;  white-space: nowrap;}

	@media (max-width: 1200px) and (min-width: 1024px) {
			.en__component--header li a { font-size: 0.75rem; }
	}

	.en__component--header li:last-child a { background: #009EE2; color: white; }
	.en__component--header li a:hover {color: #000;}
/* ... */

